--- a/src/configs/dataset/soccer.yaml
+++ b/src/configs/dataset/soccer.yaml
@@ -1,10 +1,10 @@
 name: soccer
-root_dir: /root/datasets/soccer
+root_dir: /content/drive/MyDrive/Object_tracking/WASB-SBDT_ball_tracking/soccer
 video_dirname: videos
 frame_dirname: frames
 anno_dirname: annos
 img_ext: '.png'
-video_ext: '.avi'
+video_ext: '.mp4'
 train:
   videos:
     - ID-1
@@ -15,6 +15,5 @@ train:
 test:
   videos:
     - ID-5
-    - ID-6
   num_clip_ratio: 1.0
 
