hard space issue

--- a/src/configs/eval.yaml
+++ b/src/configs/eval.yaml
@@ -10,6 +10,6 @@ defaults:
 hydra:
   run:
     dir: /root/outputs/${hydra.job.name}/${now:%Y-%m-%d_%H-%M-%S}
-output_dir:
+output_dir: /content/drive/MyDrive/Object_tracking/WASB-SBDT_ball_tracking
 seed: 1234
 
