change output dir

--- a/src/configs/runner/eval.yaml
+++ b/src/configs/runner/eval.yaml
@@ -1,9 +1,9 @@
 name: eval
 device: cuda
 gpus: [0]
-vis_result: False
-vis_hm: False
-vis_traj: False
+vis_result: True
+vis_hm: True
+vis_traj: True
 #best_model_name: best_model.pth.tar
 #model_dir: 
 model_path: 
