--- a/src/configs/dataset/soccer.yaml
+++ b/src/configs/dataset/soccer.yaml
@@ -1,5 +1,5 @@
 name: soccer
-root_dir: /content/drive/MyDrive/datasets/soccer
+root_dir: /mnt/datasets/soccer
 video_dirname: videos
 frame_dirname: frames
 anno_dirname: annos
