--- a/src/configs/dataset/soccer.yaml
+++ b/src/configs/dataset/soccer.yaml
@@ -4,16 +4,17 @@ video_dirname: videos
 frame_dirname: frames
 anno_dirname: annos
 img_ext: '.png'
-video_ext: '.avi'
-train:
+video_ext: '.mp4'
+# train:
+#   videos:
+    
+#   num_clip_ratio: 1.0
+test:
   videos:
     - ID-1
     - ID-2
     - ID-3
     - ID-4
-  num_clip_ratio: 1.0
-test:
-  videos:
     - ID-5
   num_clip_ratio: 1.0
 
